Improve responsive layout: fix navigation menu, logo display, icon grid spacing, and responsive title sizing

--- a/public/style.css
+++ b/public/style.css
@@ -113,7 +113,7 @@ body {
   background-size: cover;
   background-attachment: scroll;
   margin-bottom: 0;
-  padding-bottom: 25px;
+  padding-bottom: 60px;
   overflow: visible;
 }
 
@@ -299,7 +299,7 @@ p {
 
 .titel.wie {
   text-align: center;
-  margin: 0 0 15px 0;
+  margin: 30px 0 15px 0;
   padding: 5px 0;
   width: 100%;
   order: initial;
@@ -372,6 +372,10 @@ p {
     margin: 0;
     width: 100%;
     text-align: center;
+  }
+
+  .home {
+    padding-bottom: 20px;
   }
   
   .portret {
@@ -895,7 +899,7 @@ p {
   background-image: none;
   background-position: initial;
   background-size: initial;
-  padding: 20px;
+  padding: 0px;
 }
 
 .paragraph {
